@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    namespace model {
      class model.ActionChain {
          {static} + LOSS : int
          {static} + SUCCESS : int
          ~ NUMHANDLER : int
          ~ NUMMAX : int
          ~ generate : Random
          + ActionChain()
          + process()
          + process()
          - buildChain()
      }
    }
  }
  

  namespace  model {
    namespace model {
      abstract class model.Handler {
          + Handler()
          + process()
      }
    }
  }
  

  namespace model {
    namespace model {
      class model.NegativeHandler {
          - LOSS : int
          + NegativeHandler()
          + process()
      }
    }
  }
  

  namespace model {
    namespace model {
      class model.Player {
          - count : Integer
          - name : String
          - number : Integer
          + Player()
          + addNumber()
          + getCount()
          + getNumber()
          + pay()
      }
    }
  }
  

  namespace model {
    namespace model {
      class model.PositiveHandler {
          - SUCESS : int
          + PositiveHandler()
          + process()
      }
    }
  }
  

  model.ActionChain o-- model.Handler : chain
  model.ActionChain o-- model.Player : player
  model.Handler o-- model.Handler : processor
  model.NegativeHandler -up-|> model.Handler
  model.NegativeHandler o-- model.Player : player
  model.PositiveHandler -up-|> model.Handler
  model.PositiveHandler o-- model.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
